refactor(iter-4): CodeEngine + CompiledCode 统一，条件检查提升到 Injector 层，删除 ExpressionHandler 旧体系