@@ -1,11 +1,14 @@
 package fun.efto.luna.core.plugin.builtin.snapshot;
 
 import fun.efto.luna.core.injection.InjectionCommand;
+import fun.efto.luna.core.injection.code.CompiledCode;
 import fun.efto.luna.core.plugin.AbstractProbeHandler;
 import fun.efto.luna.core.plugin.GenerateContext;
 import fun.efto.luna.core.plugin.ValidationResult;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -28,19 +31,19 @@ public class SnapshotProbeHandler extends AbstractProbeHandler {
 
     @Override
     public Set<String> supportedInjectionLocations() {
-        return Set.of("line_before", "line_after", "method_enter", "method_exit");
+        return new HashSet<>(Arrays.asList("line_before", "line_after", "method_enter", "method_exit"));
     }
 
     @Override
     protected ValidationResult doValidate(InjectionCommand request) {
         if (request.getCodeType() != null) {
-            return ValidationResult.okWithWarnings(List.of("SNAPSHOT probe ignores codeType"));
+            return ValidationResult.okWithWarnings(Collections.singletonList("SNAPSHOT probe ignores codeType"));
         }
         return ValidationResult.ok();
     }
 
     @Override
-    public void handle(Object code, GenerateContext ctx) {
+    public void handle(CompiledCode code, GenerateContext ctx) {
         delegate.generateBytecode(ctx);
     }
 }
